# MapPlotter3D

./: .gitignore
Code/: geoJSON_to_2d_obj.py  geoJSON_to_3d_obj.py  geoJSON_to_3d_obj_old.py  old_data_reader.py  old_main.py  plot_objects.py  pyproject.toml  tests.py
Code/src/mapplotter3d/: main.py  mapplotter.py
Code/src/mapplotter3d.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
Code/src/mapplotter3d/geo_info/: geo_json_finder.py
Code/src/mapplotter3d/geometry/: mesh.py
Code/src/mapplotter3d/io/: data_reader.py  downloader.py
Code/src/mapplotter3d/ui/: data_chooser_panel.py  main_window.py  plot_area.py
Code/src/mapplotter3d/utils/: mesh_plotter.py  normalization.py  test.py  text_normalization.py
Code/src/mapplotter3d/validation/: data_row_checks.py
